syntax = "proto3";

package user;

option go_package = "newWalletService/userService/proto;user";

// Сервис для работы с пользователями
service UserService {
  // Метод поиска пользователя по username
  rpc Find (FindRequest) returns (FindResponse);
}

// Запрос с ID пользователя
message FindRequest {
  string username = 1;
}

// Ответ с информацией о пользователе
message FindResponse {
  int64 user_id = 1;
  string username = 2;
}